--- a/LaserRadar/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -287,6 +287,11 @@
                         android:text="@string/move"
                         style="@style/MapButton"
                         />
+                    <Button
+                        android:id="@+id/button_point_stop"
+                        android:text="@string/point_stop"
+                        style="@style/MapButton"
+                        />
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:orientation="horizontal"
