--- a/LaserRadar/HeadControl/app/src/main/res/values/colors.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/values/colors.xml
@@ -151,6 +151,7 @@
     <color name="darkblue">#00008B</color><!--暗蓝色 -->
     <color name="navy">#000080</color><!--海军色 -->
     <color name="black">#000000</color><!--黑色 -->
+    <color name="point">#53940a</color><!--黑色 -->
     <color name="divider_line">#1d86b7</color>
     <color name="btn_true">#B3313033</color>
     <color name="btn_false">#80313033</color>
