--- a/LaserRadar/HeadControl/app/src/main/res/layout/battery_rightbar.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/layout/battery_rightbar.xml
@@ -28,7 +28,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_Battery_Level"
+                android:id="@+id/tv_Battery_Level1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/bar_right_text_marginTop01"
