--- a/LaserRadar/HeadControl/app/src/main/res/layout/fragment_battery.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/layout/fragment_battery.xml
@@ -75,11 +75,11 @@
                         <!--android:layout_width="300dp"
                             android:layout_height="100dp" -->
                         <ImageView
-                            android:id="@+id/iv_Battery_Power"
+                            android:id="@+id/iv_Battery_Power01"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
 
-                            android:src="@mipmap/power9" />
+                            android:src="@mipmap/power2" />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -229,11 +229,11 @@
 
 
                         <ImageView
-                            android:id="@+id/imageView3"
+                            android:id="@+id/iv_Battery_Power"
                             android:layout_width="922px"
                             android:layout_height="327px"
                             android:layout_centerInParent="true"
-                            android:background="@mipmap/dianchi" />
+                             />
 
                         <TextView
                             android:id="@+id/tv_Battery_Level"
