--- a/LaserRadar/HeadControl/app/src/main/res/values/styles.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/values/styles.xml
@@ -49,8 +49,10 @@
     </style>
     <style name="MyTextView">
         <item name="android:layout_gravity">center</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">#A5F848</item>
+        <item name="android:textSize">25px</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">64px</item>
     </style>
     <style name="MyButton">
         <item name="android:textColor">@color/black</item>
