--- a/LaserRadar/HeadControl/app/src/main/res/values/colors.xml
+++ b/LaserRadar/HeadControl/app/src/main/res/values/colors.xml
@@ -82,7 +82,7 @@
     <color name="paleturquoise">#AFEEEE</color><!--苍宝石绿 -->
     <color name="greenyellow">#ADFF2F</color><!--黄绿色 -->
     <color name="lightblue">#ADD8E6</color><!--亮蓝色 -->
-    <color name="darkgray">#A9A9A9</color><!--暗灰色 -->
+    <color name="darkgray">#ABAFB2</color><!--暗灰色 -->
     <color name="darkgrey">#A9A9A9</color><!--暗灰色 -->
     <color name="brown">#A52A2A</color><!--褐色 -->
     <color name="sienna">#A0522D</color><!--赭色 -->
@@ -165,4 +165,5 @@
     <color name="battery_power_text_color">#FFFFFF</color>
 
     <color name="vifrification">#00000000</color>
+    <color name="line">#7D7D7D</color>
 </resources>
